[1] add login and sign-up initial page

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+application.title: PeepFeed Blog
+application.version: 0.1.1
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/peep-feed-dev
