--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     show-sql: true
     properties:
       hibernate.format_sql: true
-      org.hibernate.envers.default_schema: app_audit
+      org.hibernate.envers.default_schema: public
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
